Blog post about Module 1

--- a/_posts/2016-2-19-Module-1.md
+++ b/_posts/2016-2-19-Module-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: The First Actual Blog Post (Module 1, Especially Exercise 3)
+title: The First Actual Post (Module 1, Especially Exercise 3)
 ---
 
 Well, I am quite behind but working on catching up. I've just finished Exercise 3 and boy howdy, has it been an adventure. By that, I mean I am a little bit grumpy about annoying computer programs.
