Blog post about Module 2

--- a/_posts/2016-4-3-Module-2.md
+++ b/_posts/2016-4-3-Module-2.md
@@ -5,6 +5,8 @@ title: Module 2 - Attack of the APIs
 
 I probably should have written this when I had actually finished the module, but better late than never, right? Anyway, like Episode II of Star Wars, Module 2 was my least favourite module. However, unlike Episode II, it was also the module where I pushed myself the most and learned because of it. I went through the first three exercises for this module.
 
+The results of Exercises 2 and 3 can be found [here.] (https://github.com/the-eleanor/Module-2-Exercises) The first exercise results are in the research notebook.
+
 The first exercise was simple enough. The Dream Case exercise had me searching a few databases for information - as discussed in my research notes, the one on the Epigraphic Database Heidelberg site came up with nothing (I tried to search 'coquit' and variants because I love cooking and it's one of the few words I remember from Grade 11 Latin class). The CWGC database provided me some information about folks with the same last name. It was interesting to see information about people who might be distant relatives! This exercise was just about searching terms, which is a handy skill to have but nothing new to me. [Here is my notebook entry about this exercise.] (https://github.com/the-eleanor/Research-Notebook/blob/master/M2E1%20Dream%20Case%20-%20February%2021%2C%202016..txt)
 
 Then things got interesting.
